Wrapping issues

--- a/app/assets/stylesheets/articles.css.scss
+++ b/app/assets/stylesheets/articles.css.scss
@@ -41,6 +41,7 @@
   blockquote {
     font-size: 16px;
   }
+  code { white-space: normal; }
   h1 { font-size: 26px; }
   h2 { font-size: 23px; }
   h3 { font-size: 18px; }
